--- a/index1.html
+++ b/index1.html
@@ -95,7 +95,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src=https://i.postimg.cc/kg6dr16n/IMG-20250322-105722.jpg alt="Your Profile Picture" class="profile-picture">
+            <img src=IMG_20250322_105722.jpg alt="Your Profile Picture" class="profile-picture">
             <h1>Seethalakshmi.V</h1>
             <p>Am Artificial Intellgent student</p>
         </div>
