--- a/index1.html
+++ b/index1.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+see<!DOCTYPE html>
 <html>
 <head>
     <title>Portfolio</title>
@@ -162,7 +162,7 @@
         <div class="section-content">
             <center>
             <h2>Resume</h2>
-            <a href="Files by Google\see resume.pdf" target="_blank" class="download-button">Download CV</a>
+            <a href=see resume .pdf target="_blank" class="download-button">Download CV</a>
         </center>
         </div>
         
